--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> kirk, miode, red, deniel </h1>
+    <h1>TEAM KUPS</h1>
+    <p>Deniel</p>
+    <p>kirk</p>
+    <p>red</p>
+    <p>miode</p>
 </body>
 </html>
